--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-feather": "^2.0.10",
-    "styled-components": "^5.3.8"
+    "react-iframe": "^1.8.5",
+    "styled-components": "^5.3.8",
+    "uuid": "^9.0.0"
   }
 }
